--- a/mongodb/chas2/package.json
+++ b/mongodb/chas2/package.json
@@ -1,7 +1,6 @@
 {
   "name": "chas2",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.0.2"
-  }
+    "mongoose": "^7.0.3"
+  },
+  "description": ""
 }
