--- a/mongodb/c4/config.env
+++ b/mongodb/c4/config.env
@@ -1,3 +1,6 @@
 PORT=10000
 DATABASE=mongodb+srv://Triki:<PASSWORD>@cluster0.lvrcsc0.mongodb.net/netliks?retryWrites=true&w=majority
 DATABASE_PASSWORD=trikomon00
+
+JWT_SECRET=nashata tajna rechenica sto podolga toa podobro
+JWT_EXPIRES=90d
